--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android= "http://schemas.android.com/apk/res/android"
-    package="com.example.findme" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.findme">
+
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
+        android:background="@drawable/wll"
         android:icon="@mipmap/ic_launcher"
         android:label="FindMe"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:background="@drawable/wll"
-        android:theme="@style/AppTheme.NoActionBar" >
-        <activity android:name=".login" >
+        android:theme="@style/AppTheme.NoActionBar">
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
+        <activity android:name=".login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".menu"
-            android:label="Welcome Back"
-             />
+            android:label="Welcome Back" />
         <activity
             android:name=".forgotpassword"
             android:label="Forgot Password" />
