//fixed map//.... //added a friend profile activity...working all good....more work still though//

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,17 @@
         <activity
             android:name=".forgotpassword"
             android:label="Forgot Password" />
+
+        <activity
+            android:name=".friendjava"
+            android:label="Friendlist"
+            />
+
+        <activity
+            android:name=".friendsprofile"
+            android:label="Fprofile"
+            />
+
     </application>
 
 </manifest>
