//working on retriving firebase data and implementing google and facebook login //settting fragment in progress //finalizing other fragments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,12 @@
             android:label="Signuppage"
             android:theme="@style/AppTheme.NoActionBar"
             />
+        <activity
+            android:name=".settings"
+            android:label="Settings"/>
+        <activity
+            android:name="editprofile"
+            android:label=""/>
 
     </application>
 
