Updated UI....Crash bug fixed  :)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <!--suppress AndroidDomInspection -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.findme">
+    package="com.FindMe.findme">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -10,7 +10,7 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -41,7 +41,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBH-t741rvfY-P46OntLNHjDrplbBd-Lak" />
 
-        <activity android:name=".MainPage" >
+        <activity android:name="com.FindMe.findme.MainPage"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,44 +51,44 @@
         </activity>
 
         <activity
-            android:name=".login"
+            android:name="com.FindMe.findme.login"
             android:label="sign in" />
         <activity
-            android:name=".fragmentholder"
+            android:name="com.FindMe.findme.fragmentholder"
             android:label="Welcome Back" />
         <activity
-            android:name=".forgotpassword"
+            android:name="com.FindMe.findme.forgotpassword"
             android:label="Forgot Password" />
 
 
-        <activity android:name=".addfriends"
+        <activity android:name="com.FindMe.findme.addfriends"
             android:label="AddFriend">
 
         </activity>
 
-        <activity android:name=".friendrequest"
+        <activity android:name="com.FindMe.findme.friendrequest"
             android:label="Friend Request">
 
         </activity>
 
 
         <activity
-            android:name=".signup"
+            android:name="com.FindMe.findme.signup"
             android:label="Signuppage"
             android:theme="@style/AppTheme.NoActionBar"
             />
 
 
-        <activity android:name=".friendsprofile"
+        <activity android:name="com.FindMe.findme.friendsprofile"
             android:label="Friends Profile"
             android:theme="@style/request">
 
         </activity>
         <activity
-            android:name="editprofile"
+            android:name="com.FindMe.findme.editprofile"
             android:label="Edit Profile"/>
 
-        <activity android:name=".friendRequestOption"
+        <activity android:name="com.FindMe.findme.friendRequestOption"
             android:label="Request Option"
             android:theme="@style/request">
 
